# OllamaVacc

./: .gitignore  README.md  pipeline.py  pyproject.toml  requests_job.sh  run_pipeline.sh  run_requests.sh  test_pipeline.py
data/: labeled-data.csv
