[tool.poetry]
name = "llamalabel"
version = "0.1.0"
description = ""
authors = ["Jason Lobell <81822609+Jayman391@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
